Fix navigation overlap with z-index

--- a/src/app/components/shared/nav-bar/nav-bar.component.scss
+++ b/src/app/components/shared/nav-bar/nav-bar.component.scss
@@ -8,6 +8,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    z-index: 5;
 
     .logo-container {
         display: flex;
@@ -63,7 +64,7 @@
                 align-items: center;
                 gap: 2px;
                 position: relative;
-                z-index: 1;
+                z-index: 5;
 
                 .nav-link-icon {
                     transition: all $anim-time ease;
@@ -101,8 +102,9 @@
                     border-radius: 8px;
                     gap: 16px;
                     box-shadow: $shadow-card;
-                    z-index: 4;
+                    z-index: 6;
                     opacity: 0;
+                    background-color: $color-white;
 
                     transition: all $anim-time ease;
 
